15-PolicyDrivenGovernanceAndAdmissionControl/06-BlockingPrivilegedPodsWithKyverno/unprivileged-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unprivileged-pod
spec:
  containers:
  - name: nginx
    image: nginx
    securityContext:
      privileged: false
